--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8"
-<title>Float</title>
-</head>
 
+<head>
+    <meta charset="utf-8">
+    <title>Float</title>
+</head>
 <body>
-The content of the document......
+    <p>The content of the document</p>
 </body>
 
 </html>
