--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset-css.css">
     <title>Float</title>
 </head>
 <body>
-    <p>The content of the document</p>
+    <p class="test1">test1</p>
+    <p class="test2">test2</p>
 </body>
 
 </html>
