--- a/index.html
+++ b/index.html
@@ -2,14 +2,105 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+    <title>float</title>
     <link rel="stylesheet" href="css/reset-css.css">
-    <title>Float</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
-    <p class="test1">test1</p>
-    <p class="test2">test2</p>
+    <div class="green-box">
+    <header class="">
+        <a href="index.html">
+            <img src="img/float-1.png" alt="logo">
+        </a>
+        <nav class="navigation">
+            <ul>
+                <li>
+                    <a href="#">home</a>
+                </li>
+
+                <li>
+                    <a href="#">News</a>
+                </li>
+
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+
+        <div class="clear"></div>
+
+    </header>
+
+    <div class="main-box">
+        <div class="yellow-box">
+            <img src="img/float-2.jpg" alt="float-2">
+            <div class="text">
+                <p> ipsum dolor sit amet, consectetur adipiscing elit. Aenean et eros ullamcorper, eleifend eros vitae,
+                    aliquam dolor. In ut ex ac mauris cursus commodo vitae eu metus. In hac habitasse platea dictumst.
+                    Vivamus at turpis lectus. Praesent convallis ante leo, tempor molestie elit vestibulum ac. Maecenas
+                    finibus urna nisi, commodo hendrerit dui sollicitudin nec. Praesent eu placerat lacus. Sed et
+                    dapibus
+                    felis, eget volutpat orci. Donec eleifend metus in condimentum auctor. Quisque ultrices nisl sit
+                    amet
+                    dictum condimentum. Nam eu leo tellus.
+                    Curabitur venenatis enim ut pharetra auctor. </p>
+                <p>Maecenas at rutrum eros. Donec sem augue, consectetur non vehicula et, iaculis id est. Phasellus
+                    ligula
+                    orci, faucibus imperdiet tempus ac, sollicitudin ac dui. Ut euismod eleifend lacus, nec ullamcorper
+                    elit
+                    fringilla rutrum. Suspendisse vestibulum placerat tortor, a porttitor urna. Phasellus facilisis nisl
+                    vitae pharetra bibendum.
+
+                    Pellentesque venenatis enim tortor, ac rutrum odio ullamcorper auctor. Maecenas quis tincidunt
+                    lacus.
+                    Curabitur aliquam tortor dolor, in elementum nulla scelerisque a. Pellentesque consectetur dapibus
+                    leo,
+                    at maximus nisi mollis eu. Integer malesuada augue condimentum arcu facilisis ornare. Morbi sem
+                    metus,
+                    ultricies aliquet ultricies eu, vulputate at odio. Morbi maximus risus lectus, non vehicula tellus
+                    finibus eu.
+                </p>
+            </div>
+        </div>
+        <div class="yellow-box">
+            <img src="img/float-2.jpg" alt="float-2">
+            <div class="text">
+                <p> ipsum dolor sit amet, consectetur adipiscing elit. Aenean et eros ullamcorper, eleifend eros vitae,
+                    aliquam dolor. In ut ex ac mauris cursus commodo vitae eu metus. In hac habitasse platea dictumst.
+                    Vivamus at turpis lectus. Praesent convallis ante leo, tempor molestie elit vestibulum ac. Maecenas
+                    finibus urna nisi, commodo hendrerit dui sollicitudin nec. Praesent eu placerat lacus. Sed et
+                    dapibus
+                    felis, eget volutpat orci. Donec eleifend metus in condimentum auctor. Quisque ultrices nisl sit
+                    amet
+                    dictum condimentum. Nam eu leo tellus.
+                    Curabitur venenatis enim ut pharetra auctor. </p>
+                <p>Maecenas at rutrum eros. Donec sem augue, consectetur non vehicula et, iaculis id est. Phasellus
+                    ligula
+                    orci, faucibus imperdiet tempus ac, sollicitudin ac dui. Ut euismod eleifend lacus, nec ullamcorper
+                    elit
+                    fringilla rutrum. Suspendisse vestibulum placerat tortor, a porttitor urna. Phasellus facilisis nisl
+                    vitae pharetra bibendum.
+
+                    Pellentesque venenatis enim tortor, ac rutrum odio ullamcorper auctor. Maecenas quis tincidunt
+                    lacus.
+                    Curabitur aliquam tortor dolor, in elementum nulla scelerisque a. Pellentesque consectetur dapibus
+                    leo,
+                    at maximus nisi mollis eu. Integer malesuada augue condimentum arcu facilisis ornare. Morbi sem
+                    metus,
+                    ultricies aliquet ultricies eu, vulputate at odio. Morbi maximus risus lectus, non vehicula tellus
+                    finibus eu.
+                </p>
+            </div>
+        </div>
+
+    </div>
+    </div>
 </body>
 
 </html>
